@@ -1,5 +1,9 @@
 2009-08-20  Christian Faulhammer  <fauli@gentoo.org>
 
+	* ebuild-mode-keywords.el (ebuild-mode-keywords-kde4-functions),
+	(ebuild-mode-keywords-kde4-base),
+	(ebuild-mode-keywords-kde4-meta): Add new functions for KDE 4 eclasses
+
 	* gentoo-syntax.el (ebuild-mode-insert-skeleton): Add new function
 	which inserts a skeleton ebuild on C-c C-n.  Code example taken
 	from exheres-mode written by Elias Pipping.
